--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -6,10 +6,10 @@ menu:
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "https://github.com/yungoo"
+  weibo: "https://weibo.com/hyaiyang"
+  # rss: "#"
+  # zhihu: "#"
   #douban: "#"
   #mail: "#"
   #facebook: "#"
@@ -22,7 +22,7 @@ rss: /atom.xml
 # 是否需要修改 root 路径
 # 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
 # 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: 
+root: ''
 
 # Content
 excerpt_link: more
@@ -37,12 +37,12 @@ open_in_new: false
 
 # Miscellaneous
 google_analytics: ''
-favicon: /favicon.png
+favicon: /favicon.jpg
 
 #你的头像url
-avatar:
+avatar: http://tva4.sinaimg.cn/crop.0.0.180.180.180/74c2d5edjw1e8qgp5bmzyj2050050aa8.jpg
 #是否开启分享
-share_jia: true
+share_jia: false
 share_addthis: false
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
@@ -52,15 +52,15 @@ tagcloud: true
 
 #是否开启友情链接
 #不开启——
-#friends: false
+friends: false
 #开启——
-friends:
-  奥巴马的博客: http://localhost:4000/
-  卡卡的美丽传说: http://localhost:4000/
-  本泽马的博客: http://localhost:4000/
-  吉格斯的博客: http://localhost:4000/
-  习大大大不同: http://localhost:4000/
-  托蒂的博客: http://localhost:4000/
+# friends:
+#   奥巴马的博客: http://localhost:4000/
+#   卡卡的美丽传说: http://localhost:4000/
+#   本泽马的博客: http://localhost:4000/
+#   吉格斯的博客: http://localhost:4000/
+#   习大大大不同: http://localhost:4000/
+#   托蒂的博客: http://localhost:4000/
 
 #是否开启“关于我”。
 #不开启——
