--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,12 @@ author: haiyang
 language: zh-Hans
 timezone:
 
+# Sitemap
+sitemap:
+	path: sitemap.xml
+baidusitemap:
+	path: baidusitemap.xml
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yungoo.github.io
